fixing invisible border on main-menu in some mobile devices

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -160,7 +160,7 @@ html[lang="ja-simple"] {
 .cb--menu--item {
   font-size: 110px;
   border-color: rgba(255, 255, 255, 0.75);
-  border-width: 0.3vmax;
+  border-width: 0.04em;
   width: 50%;
   position: relative;
   a, span {
